Mon Feb 25 13:04:24 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - man/Makefile.am: Include netxml-ups man page in distribution.

Mon Feb 25 12:34:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * data/driver.list:
   - add APC BACK-UPS XS LCD (reported by Chad Miller),
   - USB completion for Powerware (for PW5115 and PW9120)

Sun Feb 24 21:36:23 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - man/netxml-ups.8: Add manual page for 'netxml-ups' driver (shameless
   copy from the 'mge-xml' man page with some additional comments).

Sun Feb 24 20:31:59 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - driver/mge-xml.c: Add manufacturer string if we succesfully parsed
   the '/mgeups/product.xml' page.
 - driver/netxml-ups.c: Supply user credentials when logging into the
   UPS. Not functional, since we have no functionality that needs this
   (yet).

Sun Feb 24 19:56:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/serial.c: Cleanup some of the serial I/O functions (no
   functional changes).

Sun Feb 24 11:17:36 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - netxml-ups: Add autoconf and configure magic.

Sat Feb 23 21:27:10 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups.[ch]: Add 'ups.status' and 'ups.alarm' processing.
 - drivers/mge-xml.c: Create mapping between XML and NUT variables.

Fri Feb 22 20:11:33 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - man/usbhid-ups.8: Added cautionary warning for unattended shutdowns.

Fri Feb 22 19:14:04 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/*.c: The upscli_disconnect() function does no longer LOGOUT
   from the server. Adding this to the clients that use this to prevent
   the server from logging warnings.

Fri Feb 22 18:45:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/mge-hid.c: HU_FLAG_ABSENT implies that the value isn't stored
   in the UPS, so the HU_FLAG_STATIC is redundant.